@@ -9,6 +9,13 @@
 
 2009-10-23  Michael Snyder  <msnyder@vmware.com>
 
+	* record.c (top level): Don't include byteswap.h.
+	(netorder64): Use store_unsigned_integer instead of bswap_64.
+	(netorder32): Use store_unsigned_integer instead of bswap_32.
+	(netorder16): Use store_unsigned_integer instead of bswap_16.
+
+2009-10-23  Michael Snyder  <msnyder@vmware.com>
+
 	* record.c (netorder64): Use BFD_ENDIAN_LITTLE not LITTLE_ENDIAN.
 	(netorder32): Ditto.
 	(netorder16): Ditto.
